Alterações: Rotas, Tela principal e nos arquivos e navigator

--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   },
   "author": "Luiz Vivas",
   "displayName": "Controle Lavanderia",
-  "license": "MIT"
+  "license": "GNU General Public License v3.0"
 }
